--- a/naser-9878-kashi/package.json
+++ b/naser-9878-kashi/package.json
@@ -48,7 +48,8 @@
     "@loopback/openapi-v3": "^1.1.2",
     "@loopback/repository": "^1.0.5",
     "@loopback/rest": "^1.3.1",
-    "@loopback/rest-explorer": "^1.1.1"
+    "@loopback/rest-explorer": "^1.1.1",
+    "memory": "0.0.3"
   },
   "devDependencies": {
     "@loopback/build": "^1.0.1",
